[workspace]
resolver = "2"
members = [
  "ethcontract",
  "ethcontract-common",
  "ethcontract-derive",
  "ethcontract-generate",
  "ethcontract-mock",
  "examples",
  "examples/documentation",
  "examples/generate",
]

[patch.crates-io]
web3 = { git = "https://github.com/iskorotkov/rust-web3", branch = "feat/add-http-transport-retries" }
